--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
                             <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
-                                    <img src="./assets/img/projects/sumana.jpg" class="card-img-top rounded"
-                                        alt="Atlantis">
+                                    <img src="./assets/img/projects/sumana.JPG" class="card-img-top rounded"
+                                        alt="Sumana">
                                 </div>
                                 <div class="card-body pt-2">
                                     <h3 class="h5 card-title mt-4">Dwarak Sumana</h3>
