--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -103,21 +103,36 @@
                     </div>
                     <ul class="navbar-nav mr-auto">
                     </ul>
-                    <ul class="navbar-nav">
-                        <li>
-                            <a href="../../html/pages/projects.html" class="nav-link">Projects </a>
-                        </li>
-                        <li>
-                            <a href="../../html/pages/testimonials.html" class="nav-link">Testimonials
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../../html/pages/about.html" class="nav-link">About </a>
-                        </li>
-                        <li>
-                            <a href="../../html/pages/contact.html" class="nav-link">Contact </a>
-                        </li>
-                    </ul>
+                </div>
+                <!-- For Mobile view -->
+                <div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <ul class="navbar-nav mr-auto">
+                            <li>
+                                <a href="../../html/pages/projects.html" class="nav-link">Projects </a>
+                            </li>
+                            <li>
+                                <a href="../../html/pages/testimonials.html" class="nav-link">Testimonials
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../../html/pages/about.html" class="nav-link">About </a>
+                            </li>
+                            <li>
+                                <a href="../../html/pages/contact.html" class="nav-link">Contact </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
