--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
         <nav id="navbar-main" aria-label="Primary navigation"
             class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-light navbar-transparent navbar-theme-primary">
             <div class="container position-relative">
-                <a class="navbar-brand shadow-soft py-3 px-4 rounded border border-light mr-lg-5" href="./index.html">
-                    <img class="navbar-brand-dark" src="./assets/img/brand/dark.svg" alt="Logo light">
-                    <img class="navbar-brand-light" src="./assets/img/brand/dark.svg" alt="Logo dark">
+                <a class="navbar-brand shadow-soft py-3 px-4 rounded border border-light mr-lg-5"
+                    href="../../index.html">
+                    <img class="navbar-brand-dark" src="../../assets/img/brand/dark.svg" alt="Logo light">
+                    <img class="navbar-brand-light" src="../../assets/img/brand/dark.svg" alt="Logo dark">
                 </a>
                 <div class="navbar-collapse collapse" id="navbar_global">
                     <div class="navbar-collapse-header">
                         <div class="row">
                             <div class="col-6 collapse-brand">
-                                <a href="./index.html"
+                                <a href="../../index.html"
                                     class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
-                                    <img src="./assets/img/brand/dark.svg" alt="Themesberg logo">
+                                    <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
                             <div class="col-6 collapse-close">
@@ -68,21 +69,36 @@
                     </div>
                     <ul class="navbar-nav mr-auto">
                     </ul>
-                    <ul class="navbar-nav">
-                        <li>
-                            <a href="./html/pages/projects.html" class="nav-link">Projects </a>
-                        </li>
-                        <li>
-                            <a href="./html/pages/testimonials.html" class="nav-link">Testimonials
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./html/pages/about.html" class="nav-link">About </a>
-                        </li>
-                        <li>
-                            <a href="./html/pages/contact.html" class="nav-link">Contact </a>
-                        </li>
-                    </ul>
+                </div>
+                <!-- For Mobile view -->
+                <div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <ul class="navbar-nav mr-auto">
+                            <li>
+                                <a href="../../html/pages/projects.html" class="nav-link">Projects </a>
+                            </li>
+                            <li>
+                                <a href="../../html/pages/testimonials.html" class="nav-link">Testimonials
+                                </a>
+                            </li>
+                            <li>
+                                <a href="../../html/pages/about.html" class="nav-link">About </a>
+                            </li>
+                            <li>
+                                <a href="../../html/pages/contact.html" class="nav-link">Contact </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
