--- a/html/pages/contact.html
+++ b/html/pages/contact.html
@@ -218,67 +218,16 @@
 
     </main>
 
-    <footer class="d-flex pb-5 pt-6 pt-md-7 border-top border-light bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <a>
-                        <img height="150" width="150" src="../../assets/img/brand/dark.svg" alt="Logo dark">
-                    </a>
-                    <p><strong>Dwarak Foundations Chennai LLP</strong>
-                        is a construction company based in Chennai.</p>
-                </div>
-                <div class="col-12 col-lg-1 mb-5 mb-lg-0">
-                </div>
-                <div class="col-6 col-lg-3 mb-5 mb-lg-0">
-                    <br>
-                    <h5>Navigation</h5>
-                    <ul class="footer-links list-unstyled mt-2">
-                        <li class="mb-1">
-                            <a href="../../html/pages/projects.html" class="p-2">Projects </a>
-                        </li>
-                        <li class="mb-1">
-                            <a href="../../html/pages/testimonials.html" class="p-2">Testimonials
-                            </a>
-                        </li>
-                        <li class="mb-1">
-                            <a href="../../html/pages/about.html" class="p-2">About </a>
-                        </li>
-                        <li class="mb-1">
-                            <a href="../../html/pages/contact.html" class="p-2">Contact </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-12 col-lg-1 mb-5 mb-lg-0">
-                </div>
-                <div class="col-12 col-lg-3 mb-5 mb-lg-0">
-                    <br>
-                    <h5>Contact Us</h5>
-                    <ul class="footer-links list-unstyled mt-2">
-                        <li>
-                            <h6>MON – SAT (9:30am-6pm)</h6>
-                        </li>
-                        <li class="mb-1">
-                            Plot No 11A, Ground floor <br>
-                            Arumugam nagar 1st Street,
-                            <br>
-                            IIT colony main road,
-                            <br>
-                            Pallikarnai, Chennai – 600100
-                        </li>
-                        <li>
-                            <h6>dwarakfoundations@gmail.com</h6>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
-            <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
-                <p class="font-weight-normal font-small mb-0">Copyright © Dwarak Foundations Chennai LLP
-                    <span class="current-year">2021</span>. All rights reserved.
-                </p>
-            </div>
+    <footer class="page-footer font-small blue">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3" role="contentinfo" style="background:darkgray; color: black">
+            <p class="font-weight-normal font-small mb-0">Copyright © Dwarak Foundations Chennai LLP
+                <span class="current-year">2021</span>. All rights reserved.
+            </p>
         </div>
+        <!-- Copyright -->
+
     </footer>
 
     <!-- Core -->
