--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!--
-
-=========================================================
-* Neumorphism UI - v1.0.0
-=========================================================
-
-* Product Page: https://themesberg.com/product/ui-kits/neumorphism-ui
-* Copyright 2020 Themesberg MIT LICENSE (https://www.themesberg.com/licensing#mit)
-
-* Coded by https://themesberg.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -39,6 +23,7 @@
 
     <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
 
+    <style></style>
 </head>
 
 <body>
@@ -340,8 +325,22 @@
             </div>
         </div>
     </main>
+    <!-- End of Main Content -->
+    <!-- Footer -->
+    <footer class="page-footer font-small blue">
 
-    <footer class="d-flex pb-3 pt-3 pt-md-4 border-top border-light bg-primary">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3" role="contentinfo" style="background:darkgray; color: black">
+            <p class="font-weight-normal font-small mb-0">Copyright © Dwarak Foundations Chennai LLP
+                <span class="current-year">2021</span>. All rights reserved.
+            </p>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+
+    <!-- Old footer -->
+    <!-- <div class="d-flex pb-3 pt-3 pt-md-4 border-top border-light bg-primary" style="background: red;">
         <div class="container">
             <div class="row">
 
@@ -403,8 +402,9 @@
                 </p>
             </div>
         </div>
+    </div> -->
 
-    </footer>
+
 
     <!-- Core -->
     <script src="./vendor/jquery/dist/jquery.min.js"></script>
@@ -427,6 +427,7 @@
 
     <!-- Neumorphism JS -->
     <script src="./assets/js/neumorphism.js"></script>
+
 </body>
 
 </html>
