Add Google maps api and update Projects

--- a/html/pages/contact.html
+++ b/html/pages/contact.html
@@ -153,8 +153,8 @@
                                     <div class="col-12">
                                         <div class="shadow-inset p-4 mb-5 rounded">
                                             <iframe class="map rounded" id="gmap_canvas"
-                                                src="https://www.google.com/maps/embed/v1/place?q=place_id:ElhBcnVtdWdhbSBOYWdhciBJIFN0LCBWLkcuUCBTaGFudGkgTmFnYXIsIFBhbGxpa2FyYW5haSwgQ2hlbm5haSwgVGFtaWwgTmFkdSA2MDAxMDAsIEluZGlhIi4qLAoUChIJdxpZ_jVcUjoRixPZ5_CVZccSFAoSCYfadJxJXFI6ESrv9s-QK5gV&key=..."></iframe>
-                                            <!-- src="https://maps.google.com/maps?q=san%20francisco&t=&z=8&ie=UTF8&iwloc=&output=embed"></iframe> -->
+                                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d497732.60109624936!2d80.209528!3d12.93752!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525c35fe591a77%3A0xc76595f0e7d9138b!2sArumugam%20Nagar%20I%20St%2C%20Pallikaranai%2C%20Chennai%2C%20Tamil%20Nadu%20600100%2C%20India!5e0!3m2!1sen!2sus!4v1636088923209!5m2!1sen!2sus"
+                                                loading="lazy"></iframe>
                                         </div>
                                     </div>
                                     <div class="col-12 col-md-8 text-center mb-5">
@@ -170,9 +170,9 @@
                                                 <span class="fas fa-headphones-alt"></span>
                                             </div>
                                             <h2 class="h5 icon-box-title">Call</h2>
-                                            <span>+91 9884409031</span>
+                                            <span><a href="tel:+919884409031">+91 9884409031</a></span>
                                             <br>
-                                            <span>+91 9884000660</span>
+                                            <span><a href="tel:+919884000660">+91 9884000660</a></span>
                                             <div class="text-small text-gray">
                                                 Mon - Sat, 9:30am - 6:00pm
                                             </div>
