--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -145,12 +145,12 @@
 
         <div class="section bg-primary pt-0 section-lg">
             <div class="container">
-
-                <div class="row">
-                    <div class="col text-center">
-                        <h2 class="h5 mb-6">Recent Projects</h2>
-                    </div>
-                </div>
+                <br>
+                <br>
+                <center>
+                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">Recent Projects
+                    </h2>
+                </center>
 
                 <!-- first row -->
                 <div class="row justify-content-center">
