--- a/html/pages/testimonials.html
+++ b/html/pages/testimonials.html
@@ -147,17 +147,12 @@
 
         <div class="section bg-primary pt-0 section-lg">
             <div class="container">
-
-                <div class="row">
-                    <div class="col text-center">
-                        <!-- <h2 class="h5 mb-6">Testimonials</h2> -->
-                    </div>
-                </div>
-                <div class="row justify-content-between">
-                    <div class="col text-center">
-                        <h2 class="h5 mb-6">Testimonials</h2>
-                    </div>
-                </div>
+                <br>
+                <br>
+                <center>
+                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">Testimonials
+                    </h2>
+                </center>
 
 
                 <div class="row justify-content-between">
