Update about.html, Update color of Carousel arrow

--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -145,12 +145,14 @@
 
         <div class="section bg-primary pt-0 section-lg">
             <div class="container">
-
-                <div class="row">
-                    <div class="col text-center">
-                        <h1 class="h5 mb-6">About Us</h1>
-                    </div>
-                </div>
+                <br>
+                <br>
+                <center>
+                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">About Us
+                    </h2>
+                </center>
+                <br>
+                <br>
                 <br>
 
                 <div class="profile-card mb-5">
