--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#Carousel3" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
+                                <span class="carousel-control-prev-icon" aria-hidden="true" style="color:white"></span>
+                                <span class="sr-only" style="color:white">Previous</span>
                             </a>
                             <a class="carousel-control-next" href="#Carousel3" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="carousel-control-next-icon" aria-hidden="true" style="color:white"></span>
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
