Update all inset to soft

--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -148,7 +148,7 @@
                 <br>
                 <br>
                 <center>
-                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">About Us
+                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">About Us
                     </h2>
                 </center>
                 <br>
@@ -158,7 +158,7 @@
                 <div class="profile-card mb-5">
                     <div class="card bg-primary shadow-soft border-light">
                         <div
-                            class="profile-image bg-primary shadow-inset border border-light rounded-circle mx-auto p-3 mt-n6">
+                            class="profile-image bg-primary shadow-soft border border-light rounded-circle mx-auto p-3 mt-n6">
                             <img src="../../assets/img/team/profile-picture-1.jpg" class="card-img-top rounded-circle"
                                 alt="Christopher Avatar">
                         </div>
