--- a/html/pages/contact.html
+++ b/html/pages/contact.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -151,7 +151,7 @@
                             <div class="card-header">
                                 <div class="row justify-content-center">
                                     <div class="col-12">
-                                        <div class="shadow-inset p-4 mb-5 rounded">
+                                        <div class="shadow-soft p-4 mb-5 rounded">
                                             <iframe class="map rounded" id="gmap_canvas"
                                                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d497732.60109624936!2d80.209528!3d12.93752!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525c35fe591a77%3A0xc76595f0e7d9138b!2sArumugam%20Nagar%20I%20St%2C%20Pallikaranai%2C%20Chennai%2C%20Tamil%20Nadu%20600100%2C%20India!5e0!3m2!1sen!2sus!4v1636088923209!5m2!1sen!2sus"
                                                 loading="lazy"></iframe>
