--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -148,7 +148,7 @@
                 <br>
                 <br>
                 <center>
-                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">Recent Projects
+                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">Recent Projects
                     </h2>
                 </center>
 
@@ -156,7 +156,7 @@
                 <div class="row justify-content-center">
                     <div class="row mb-5">
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/atlantis.jpeg" class="card-img-top rounded"
                                         alt="Atlantis">
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/gopi.jpg" class="card-img-top rounded"
                                         alt="Atlantis">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/sumana.JPG" class="card-img-top rounded"
                                         alt="Sumana">
@@ -196,7 +196,7 @@
                         </div>
                         <!-- Second row -->
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/chaman.jpg" class="card-img-top rounded"
                                         alt="chaman">
@@ -209,7 +209,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/sushruth.jpg" class="card-img-top rounded"
                                         alt="sushruth">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/skolathur.jpg" class="card-img-top rounded"
                                         alt="skolathur">
@@ -238,7 +238,7 @@
                         </div>
                         <!-- Third row -->
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/golden.jpg" class="card-img-top rounded"
                                         alt="golden">
@@ -252,7 +252,7 @@
                         </div>
 
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/shree.jpg" class="card-img-top rounded"
                                         alt="shree">
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 mb-5">
-                            <div class="card bg-primary border-light shadow-inset">
+                            <div class="card bg-primary border-light shadow-soft">
                                 <div class="card-header p-3">
                                     <img src="../../assets/img/projects/prem.jpg" class="card-img-top rounded"
                                         alt="prem">
