--- a/html/pages/skolathur.html
+++ b/html/pages/skolathur.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -150,7 +150,7 @@
                 <br>
                 <br>
                 <center>
-                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">Dwarak skolathur
+                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">Dwarak skolathur
                     </h2>
                 </center>
             </div>
@@ -175,7 +175,7 @@
                     <div class="col-12 col-md-12 col-lg-12 mb-4 mb-md-3">
                         <!-- Profile Card -->
                         <div class="profile-card mb-5">
-                            <div class="card bg-primary shadow-inset border-light">
+                            <div class="card bg-primary shadow-soft border-light">
                                 <div class="card-body">
                                     <center>
                                         <h3 class="h5 mb-2">Description</h3>
@@ -216,7 +216,7 @@
                         <!-- End of Profile Card -->
 
                         <div class="col-12">
-                            <div class="shadow-inset p-4 mb-5 rounded">
+                            <div class="shadow-soft p-4 mb-5 rounded">
                                 <iframe class="map rounded" id="gmap_canvas"
                                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d497712.23216658586!2d80.185103!3d12.947723!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525dd1be22c383%3A0xe4349d3e7688852a!2sS.%20Kolathur%2C%20Kovilambakkam%2C%20Chennai%2C%20Tamil%20Nadu%2C%20India!5e0!3m2!1sen!2sus!4v1636089417184!5m2!1sen!2sus"></iframe>
                             </div>
