--- a/html/pages/testimonials.html
+++ b/html/pages/testimonials.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -150,14 +150,14 @@
                 <br>
                 <br>
                 <center>
-                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">Testimonials
+                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">Testimonials
                     </h2>
                 </center>
 
 
                 <div class="row justify-content-between">
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Venkatesh Krishnan</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3">Software Engineer</span>
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Dinesh Rathinam​</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3">Client Manager</span>
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Sathyanarayanan Jayaraman</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3">Software Engineer</span>
@@ -226,7 +226,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Dhinakaradoss J
                                     ​</h3>
@@ -243,7 +243,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Rajalakshmi Krishnan and S. Krishnan</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3"> Retired Engineer</span>
@@ -270,7 +270,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Pratheep
                                     ​</h3>
@@ -288,7 +288,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Sridhar B</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3">Software Engineer</span>
@@ -305,7 +305,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">D Singaravelu​</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3">Retired Central Government
@@ -326,7 +326,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <div class="card bg-primary shadow-inset border-light">
+                        <div class="card bg-primary shadow-soft border-light">
                             <div class="card-body p-5">
                                 <h3 class="h5 mb-2">Sivakumar</h3>
                                 <span class="h6 font-weight-normal text-gray mb-3">Consultant at TCS</span>
