--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -105,7 +105,7 @@
                 <br>
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-10">
-                        <div class="alert alert-dark shadow-inset mb-4 mb-lg-5" role="alert">
+                        <div class="alert alert-dark shadow-soft mb-4 mb-lg-5" role="alert">
                             <span class="alert-inner--icon icon-lg"><span class="fas fa-handshake"></span></span>
                             <span class="alert-heading">Welcome!</span>
                             <h4>A man's House often reveals his Mind.</h4>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-10">
-                        <div class="alert alert-dark shadow-inset mb-4 mb-lg-5" role="alert">
+                        <div class="alert alert-dark shadow-soft mb-4 mb-lg-5" role="alert">
                             <span class="alert-inner--icon icon-lg"><span class="fas fa-clipboard-check"></span></span>
                             <span class="alert-heading">Competitive Advantages</span>
                             <p>
@@ -223,7 +223,7 @@
                 <br>
                 <br>
                 <br>
-                <div class="card bg-primary shadow-inset border-light mb-6">
+                <div class="card bg-primary shadow-soft border-light mb-6">
                     <div class="card-body px-5 py-5 text-center text-md-left">
                         <div class="row align-items-center">
                             <div class="col-md-6">
