--- a/html/pages/atlantis.html
+++ b/html/pages/atlantis.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col-6 collapse-brand">
                                 <a href="../../index.html"
-                                    class="navbar-brand shadow-inset py-2 px-3 rounded border border-light">
+                                    class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
                                     <img src="../../assets/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -150,7 +150,7 @@
                 <br>
                 <br>
                 <center>
-                    <h2 class="h5 mb-5 navbar-brand shadow-inset py-3 px-3 rounded border border-light">Dwarak Atlantis
+                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">Dwarak Atlantis
                     </h2>
                 </center>
             </div>
@@ -190,7 +190,7 @@
                     <div class="col-12 col-md-12 col-lg-12 mb-4 mb-md-3">
                         <!-- Profile Card -->
                         <div class="profile-card mb-5">
-                            <div class="card bg-primary shadow-inset border-light">
+                            <div class="card bg-primary shadow-soft border-light">
                                 <div class="card-body">
                                     <center>
                                         <h3 class="h5 mb-2">Description</h3>
@@ -242,7 +242,7 @@
                         <!-- End of Profile Card -->
 
                         <div class="col-12">
-                            <div class="shadow-inset p-4 mb-5 rounded">
+                            <div class="shadow-soft p-4 mb-5 rounded">
                                 <iframe class="map rounded" id="gmap_canvas"
                                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d497732.503311998!2d80.212393!3d12.937569000000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525c4987581a85%3A0x8c93eb3d87fb2abf!2sPaari%20Street%2C%20V.G.P%20Shanti%20Nagar%2C%20Pallikaranai%2C%20Chennai%2C%20Tamil%20Nadu%20600100%2C%20India!5e0!3m2!1sen!2sus!4v1636089818882!5m2!1sen!2sus"></iframe>
                             </div>
