--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                         </button>
                         <ul class="navbar-nav mr-auto">
                             <li>
+                                <a href="./index.html" class="nav-link">Home </a>
+                            </li>
+                            <li>
                                 <a href="../../html/pages/projects.html" class="nav-link">Projects </a>
                             </li>
                             <li>
