--- a/html/pages/harmony.html
+++ b/html/pages/harmony.html
@@ -153,7 +153,7 @@
                 <br>
                 <br>
                 <center>
-                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">Dwarak Atlantis
+                    <h2 class="h5 mb-5 navbar-brand shadow-soft py-3 px-3 rounded border border-light">Dwarak harmony
                     </h2>
                 </center>
             </div>
@@ -173,10 +173,10 @@
                             </ol>
                             <div class="carousel-inner rounded">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="../../assets/img/atlantis/1.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="../../assets/img/harmony/1.jpg" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="../../assets/img/atlantis/2.jpg" alt="Second Slide">
+                                    <img class="d-block w-100" src="../../assets/img/harmony/2.jpg" alt="Second Slide">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#Carousel3" role="button" data-slide="prev">
@@ -202,11 +202,11 @@
                                     <ul>
                                         <li>Stilt Plus Five</li>
                                         <li>10 Flats</li>
-                                        <li>Two 3 BHKs per floor</li>
+                                        <li>2 - 3 BHKs per floor</li>
                                     </ul>
                                     <ul>
                                         <p>Please check out the detailed specifications <a
-                                                href="../../assets/atlantis.pdf">here</a>.</p>
+                                                href="../../assets/harmony.pdf">here</a>.</p>
                                     </ul>
                                     </p>
                                 </div>
@@ -225,12 +225,9 @@
                                     <p class="card-text">
                                     <ul>
                                         <li>TNRERA: TN/29/Building/0174/2021</li>
-                                        <!-- <li>Dated: 24.06.2021</li> -->
+                                        <li>Dated: 24.06.2021</li>
                                         <ul>
-                                            <li><i>Ready to occupy Semi-Furnished 4 BHK apartment @5th floor</i></li>
-                                            <li><i>Salable Area 2167 sqft</i></li>
-                                            <li><i>Open Terrace Area 280 sqft</i></li>
-                                            <li><i>Provided with Modular kitchen and wooden wardrobes</i></li>
+                                            <li><i>Under Construction</i></li>
                                         </ul>
                                         <li>
                                             <p class="card-text">
